03-gitops/components/00-core/argocd/argocd-ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: argocd-server-ui
#  namespace: argocd
#  annotations:
#    cert-manager.io/cluster-issuer: ingress
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: argocd.cluster
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: argocd-server
#                port:
#                  number: 443
#  tls:
#    - hosts:
#        - argocd.cluster
#      secretName: argocd-server-tls
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: argocd-public-ui
#  namespace: argocd
#  annotations:
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: argocd.serhii.link
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: argocd-server
#                port:
#                  number: 443
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gateway
      namespace: gateway-system
  hostnames:
    - argocd.serhii.link
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
